--- a/SharpMod/SharpMod.csproj
+++ b/SharpMod/SharpMod.csproj
@@ -1,56 +1,58 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>2020.2.14.1923</AssemblyVersion>
-    <FileVersion>2020.2.14.1923</FileVersion>
-    <Authors>Xavier Flix</Authors>
-    <Company>xFX JumpStart</Company>
-    <Description>This is a verbatim implementation of the magnificent code developed by Olivier Lapicque for his Mod95 player.
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<AssemblyVersion>2020.12.11.1933</AssemblyVersion>
+		<FileVersion>2020.12.11.1933</FileVersion>
+		<Authors>Xavier Flix</Authors>
+		<Company>xFX JumpStart</Company>
+		<Description>
+			This is a verbatim implementation of the magnificent code developed by Olivier Lapicque for his Mod95 player.
 
-For more information, visit https://openmpt.org/legacy_software
+			For more information, visit https://openmpt.org/legacy_software
 
-Code ported to c# by Xavier Flix (https://github.com/morphx666) on 2014/ 04/25</Description>
-    <PackageProjectUrl>https://github.com/morphx666/SharpMod</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/morphx666/SharpMod</RepositoryUrl>
-    <RepositoryType></RepositoryType>
-    <PackageTags>mod, mod95, csharp, player, mod-player, module-player</PackageTags>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <ApplicationIcon />
-    <PackageIconUrl>https://icons8.com/icon/48278/audio-wave</PackageIconUrl>
-    <NeutralLanguage>en</NeutralLanguage>
-  </PropertyGroup>
+			Code ported to c# by Xavier Flix (https://github.com/morphx666) on 2014/ 04/25
+		</Description>
+		<PackageProjectUrl>https://github.com/morphx666/SharpMod</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/morphx666/SharpMod</RepositoryUrl>
+		<RepositoryType></RepositoryType>
+		<PackageTags>mod, mod95, csharp, player, mod-player, module-player</PackageTags>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<ApplicationIcon />
+		<PackageIconUrl>https://icons8.com/icon/48278/audio-wave</PackageIconUrl>
+		<NeutralLanguage>en</NeutralLanguage>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <OutputPath>bin\</OutputPath>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+		<OutputPath>..\Release\</OutputPath>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <OutputPath>bin\</OutputPath>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+		<OutputPath>..\Release\</OutputPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\..\..\..\..\..\Projects\SharpModPlayer\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Properties\Resources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Properties\Resources.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
 
 </Project>
