--- a/SharpModPlayer/packages.config
+++ b/SharpModPlayer/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NAudio" version="1.8.5" targetFramework="net472" />
+  <package id="OpenTK" version="3.3.1" targetFramework="net48" />
 </packages>
